# aoc2023

./: .gitignore  Cargo.toml
aoc/: cargo.toml
aoc-2023/: Cargo.toml
aoc-2023/src/: main.rs
aoc-input-downloader/: Cargo.toml
aoc-input-downloader/src/: lib.rs  main.rs
aoc/src/: main.rs
day-01/src/: input1.txt  lib.rs  main.rs
day-02/src/: lib.rs  main.rs
day-03/src/: input.txt  lib.rs  main.rs
day-04/src/: lib.rs  main.rs
day-05/: Cargo.toml
day-05/src/: lib.rs  main.rs
entry/: Cargo.toml
entry/src/: main.rs
input-downloader/: Cargo.toml
input-downloader/src/: lib.rs  main.rs
